<resources>
    <string name="app_name">Calculator</string>

    <string name="default_result">0</string>
    <string name="default_stats">Time: 0.0 ms | Mem: 0 KB</string>
    <string name="history_title">計算履歴</string>
    <string name="engine_ast">Engine: AST</string>
    <string name="engine_rpn">Engine: RPN</string>

    <string name="btn_ac">AC</string>
    <string name="btn_paren_open">(</string>
    <string name="btn_paren_close">)</string>
    <string name="btn_pow">^</string>

    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_divide">/</string>

    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_multiply">*</string>

    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_subtract">-</string>

    <string name="btn_0">0</string>
    <string name="btn_dot">.</string>
    <string name="btn_equals">=</string>
    <string name="btn_add">+</string>
</resources>